feat: add additional words to cSpell configuration for spell checking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,10 @@
     "@ionic/angular"
   ],
   "cSpell.words": [
+    "autogenerado",
+    "autoincremental",
+    "dexie",
+    "Dexie",
     "maxlength",
     "Redimensionado"
   ]
